--- a/EfimovsCalendar/EfimovsCalendar.csproj
+++ b/EfimovsCalendar/EfimovsCalendar.csproj
@@ -201,6 +201,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CalendarCell.cs" />
+    <Compile Include="Models\CalendarVM.cs" />
     <Compile Include="Models\Event.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Logic.cs" />
